Beginning of track list import UI. Other improvements.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-markdown": "^3.1.4",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
+    "react-select": "^1.2.1",
     "simpl-schema": "^0.3.2",
     "spotify-web-api-node": "^2.5.0"
   },
