--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@cleverbeagle/seeder": "^1.3.1",
     "babel-runtime": "^6.26.0",
     "bcrypt": "^1.0.3",
+    "bluebird": "^3.5.1",
     "commonmark": "^0.28.1",
     "core-js": "^2.5.1",
     "handlebars": "^4.0.11",
@@ -20,6 +21,7 @@
     "meteor-node-stubs": "^0.3.2",
     "moment": "^2.19.1",
     "moment-timezone": "^0.5.14",
+    "nodebrainz": "^2.1.1",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-addons-pure-render-mixin": "^15.6.2",
