--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-addons-pure-render-mixin": "^15.6.2",
+    "react-autobind": "^1.0.6",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.0.0",
     "react-helmet": "^5.2.0",
