--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.19.1",
     "moment-timezone": "^0.5.14",
     "nodebrainz": "^2.1.1",
+    "papaparse": "^4.3.7",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-addons-pure-render-mixin": "^15.6.2",
