Drag and drop playlist track reordering.

--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "babel-runtime": "^6.26.0",
     "bcrypt": "^1.0.3",
     "bluebird": "^3.5.1",
+    "classnames": "^2.2.5",
     "commonmark": "^0.28.1",
     "core-js": "^2.5.1",
     "double-metaphone": "^1.0.2",
     "handlebars": "^4.0.11",
+    "immutability-helper": "^2.6.6",
     "jquery": "^2.2.4",
     "jquery-validation": "^1.17.0",
     "juice": "^4.2.2",
@@ -31,6 +33,8 @@
     "react-addons-pure-render-mixin": "^15.6.2",
     "react-autobind": "^1.0.6",
     "react-bootstrap": "^0.31.5",
+    "react-dnd": "^2.6.0",
+    "react-dnd-html5-backend": "^2.6.0",
     "react-dom": "^16.0.0",
     "react-helmet": "^5.2.0",
     "react-markdown": "^3.1.4",
