--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-select": "^1.2.1",
+    "react-spotify-player": "^1.0.4",
     "simpl-schema": "^0.3.2",
     "soundex-code": "^1.0.2",
     "spotify-web-api-node": "^2.5.0"
