--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "classnames": "^2.2.5",
     "commonmark": "^0.28.1",
     "core-js": "^2.5.1",
+    "damerau-levenshtein": "^1.0.4",
     "double-metaphone": "^1.0.2",
     "handlebars": "^4.0.11",
     "immutability-helper": "^2.6.6",
     "juice": "^4.2.2",
     "lancaster-stemmer": "^1.0.2",
-    "levenshtein-edit-distance": "^2.0.2",
     "lodash": "^4.17.4",
     "meteor-node-stubs": "^0.3.2",
     "moment": "^2.22.1",
